# G002-and-G003

./: .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  install.sh  netlify.toml  pyproject.toml
G00X-plots/: G003_SPR_mapping_VRC01c.xlsx  G003_SPR_mapping_nonVRC01c.xlsx  T11.tex  T12.tex  T13.tex  T14.tex  Trimer_and_control_BAMA_data_for_figS60_and_tableS72.xlsx  combined_files.xlsx  combined_metrics.xlsx  combined_metrics_pubID.xlsx  create-single-metrics-file.ipynb  test_copy.xlsx  xlsx_find_replace.py
G00X-plots/NeutData/: G002_neuts_v3_two-mAbs-from-v2-deleted_06April2024--add non-nAb controls 09June2024--add gp3 mAbs 22Jan2025_CC_v2.xlsx  G002_neuts_v3_two-mAbs-from-v2-deleted_06April2024--add non-nAb controls 09June2024--add gp3 mAbs 22Jan2025_CCfixedcolors add 16 more gp1+3 mAbs 05Feb2025.xlsx
G00X-plots/Stats/: fig22_supp_pvals_g002.csv  fig22_supp_pvals_g00X.csv  fig2_pvals_g002.csv  fig2_pvals_g00X.csv  fig3_plus_supp_pvals_g002.csv  fig3_plus_supp_pvals_g00X.csv  fig4_pvals.csv  fig5_pvals.csv  figS19_pvals.csv  figS22bcf_pvals_g002.csv  figS22bcf_pvals_g00X.csv
G00X-plots/tablebackup/: Table1.xlsx  tableS64.xlsx
src/: Schief856_Bcell_tables_for_manuscript.Rmd  statistical-methods.Rmd
src/VISC_codebase/: 2025-02-06G00X_manuscript_FigS9.csv  2025-03-18G00X_manuscript_Fig10.csv  2025-04-24G00X_manuscript_FigS8.csv  FigS8_TabS31-34_TabS77.Rmd  FigureS9.R  Figure_S10.Rmd  TabS69-S70.Rmd  TableS35_S36.Rmd  TableS40.Rmd  TableS45_S46_S47.Rmd  TableS48_S53.Rmd  TableS54_S56.Rmd  TableS55.Rmd  TableS57.Rmd  TableS58.Rmd  TableS59_S60.Rmd  TableS61.Rmd  TableS62.Rmd  TableS63.Rmd  TableS64.Rmd  TableS66.Rmd  TableS67.Rmd  TableS68.Rmd  TableS71.Rmd  TableS78.Rmd  cli.py  code_dependencies.xlsx  comparisons_simulations.R  comparisons_table_S40.R  comparisons_table_S54_S56.R  comparisons_table_S55.R  comparisons_table_S57.R  comparisons_table_S58.R  comparisons_table_S59.R  comparisons_table_S60.R  comparisons_table_S61.R  comparisons_table_S62.R  comparisons_table_S63.R  comparisons_table_S64.R  comparisons_table_S66.R  (+8 more)
src/g00x/: app.py  cli.py  data.py  mkdocs.yml  netlify.toml
src/g00x_client/: cli.py
src/g00x_figures/: algos.py  alleles.py  app.py  cli.py  counts.py  features.py  flow_frequencies.py  misc.py  mutations.py  plots.py  properties.py  (+5 more)
(+575 files in other folders)
