[tool.poetry]
name = "g00x"
version = "0.1.0"
description = "G00x - Generalizable Germline-Targeting Clinical Trial Pipeline"
authors = [
    "Jordan R. Willis <jwillis0720@gmai.com>",
    "Troy Sincomb <troysincomb@gmail.com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SchiefLab/G00x"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
packages = [
    { include = "g00x", from = "src" },
    { include = "g00x_figures", from = "src" },
    { include = "VISC_codebase", from = "src" },
    { include = "visc_g002_bcell", from = "src" },
    { include = "g00x_client", from = "src" }
]

[tool.poetry.dependencies]
python = "3.10.*"
click = ">=7,<9"
pydantic = "1.9.0"
pyarrow = "9.0.0"
pandas = "1.5.0"
numpy = "1.26.3"
mizani = "0.9.3"
plotnine = "0.12.3"
matplotlib = "3.8.2"
scipy = "^1.9.3"
sadie-antibody = { git = "https://github.com/jwillis0720/sadie.git", rev = "v1.1.2" }
# seaborn = { git = "https://github.com/tmsincomb/seaborn-fork.git" }
logomaker = "^0.8"
pandera = "^0.18.0"
patchworklib = "0.6.3"
biopython = "1.80"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"
pre-commit = "2.20.0"
pyright = "1.1.269"
ipykernel = "6.19.2"
types-PyYAML = "^6.0.12"
pandas-stubs = "^1.5.0.221003"
types-requests = "^2.28.11.1"
globus-cli = ">=3.0.0,<4.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-redirects = "1.2.0"
mkdocs-include = "^1.0.0"
jupyterlab = "^4.0.8"
mdx-include = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
include = ["src/g00x"]
reportGeneralTypeIssues = false
disable = "W1203"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = ["ignore"]

[tool.poetry.scripts]
g00x = "g00x_client.cli:main"
